2008-04-21 [colin]	1.102.0cvs3

	* src/vcal_folder.c
		Fix default view on new folders

2008-04-20 [colin]	1.102.0cvs2

	* src/day-view.c
	* src/month-view.c
	* src/vcal_interface.h
	* src/vcal_manager.c
	* src/vcalendar.c
	* src/vcalendar.h
		Stop depending on folder->inbox in vcalendar.c
		Generalise a bit

2008-04-18 [colin]	1.102.0cvs1

	* src/vcal_folder.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	1.102.0

	1.102.0 released

	* po/fi.po
	* po/it.po
	* pt_BR.po
		updated by Flammie Pirinen, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2008-04-18 [colin]	1.101.0cvs28

	* src/vcal_folder.c
		Fix miscommit

2008-04-18 [colin]	1.101.0cvs27

	* po/fr.po
		Update translation
	* src/vcal_folder.c
		Fix translation-related problems

2008-04-08 [colin]	1.101.0cvs26

	* src/vcal_folder.c
		Fix integer overflow in Curl response code
	* src/vcal_manager.c
		Fix case-sensitive search of answers

2008-03-28 [colin]	1.101.0cvs25

	* src/vcal_folder.c
	* src/vcalendar.c
		Fix crash on unparseable text/calendar parts.

2008-03-28 [colin]	1.101.0cvs24

	* src/vcal_folder.c
	* src/vcal_interface.h
	* src/vcalendar.h
		Better fix (let the caller update the GUI
		only once at the end of the adds/updates/deletions)

2008-03-28 [colin]	1.101.0cvs23

	* src/vcal_folder.c
	* src/vcalendar.c
	* src/vcalendar.h
		(Probably) Fix refresh after add/del/update

2008-03-27 [cleroy]	1.101.0cvs22

	* src/common-views.c
	* src/day-view.c
	* src/month-view.c
	* src/vcalendar.c
	* src/vcalendar.h
		Allow cancelling from right-click menu
		too

2008-03-27 [colin]	1.101.0cvs21

	* src/vcal_folder.c
		Probably fix delete_event so that
		update_event can work.

2008-03-27 [colin]	1.101.0cvs20

	* src/vcal_folder.c
	* src/vcal_interface.h
		Fix interface a bit, move free where logical
		Thanks to Holger Berndt

2008-03-25 [colin]	1.101.0cvs19

	* src/month-view.c
		Add week number and month on the first

2008-03-18 [colin]	1.101.0cvs18

	* src/vcal_folder.c