@@ -174,3 +174,4 @@
 ( cvs diff -u -r 1.2.2.93 -r 1.2.2.94 src/vcal_folder.c;  ) > 1.102.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/day-view.c;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/month-view.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/vcal_interface.h;  cvs diff -u -r 1.1.2.72 -r 1.1.2.73 src/vcal_manager.c;  cvs diff -u -r 1.2.2.71 -r 1.2.2.72 src/vcalendar.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/vcalendar.h;  ) > 1.102.0cvs2.patchset
 ( cvs diff -u -r 1.2.2.94 -r 1.2.2.95 src/vcal_folder.c;  ) > 1.102.0cvs3.patchset
+( cvs diff -u -r 1.2.2.95 -r 1.2.2.96 src/vcal_folder.c;  cvs diff -u -r 1.2.2.72 -r 1.2.2.73 src/vcalendar.c;  ) > 1.102.0cvs4.patchset
