@@ -10,7 +10,7 @@ dnl plugin version
 MAJOR_VERSION=1
 MINOR_VERSION=102
 MICRO_VERSION=0
-EXTRA_VERSION=3
+EXTRA_VERSION=4
 
 #####
 #
