@@ -1,3 +1,9 @@
+2008-04-29 [colin]	1.102.0cvs4
+
+	* src/vcal_folder.c
+	* src/vcalendar.c
+		Fix crash on cancel
+
 2008-04-21 [colin]	1.102.0cvs3
 
 	* src/vcal_folder.c
